package com.trackwise.asset.model;

public enum AssetStatus {
    ACTIVE,
    ARCHIVED,
    SOLD,
    DISPOSED
}
