package com.trackwise.scheduling.model;

public enum Frequency {
    DAILY,
    WEEKLY,
    MONTHLY,
    QUARTERLY,
    ANNUALLY,
    CUSTOM
}
